Finished IntegrationManager